--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
@@ -2,11 +2,13 @@
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Evenementen";
     
+    //Coordinating controller
     Session["Page"] = "3";
     
     string action = "";
 
     Session["loginError"] = "";
+    //Kijken of de gebruiker is ingelogd
     if (IsPost)
     {
         action = Request["action"];
@@ -14,6 +16,8 @@
         {
         switch (action)
         {
+            //Wanneer de action "login" bevat dan checken of Session Cursist op null staat. Zoja dan koppelen we de 
+            //de Session cursist met inputveld van inlogscherm
             case "login":
                 if (Session["cursist"] == null)
                 {
@@ -30,7 +34,7 @@
 
                 }
                 break;
-
+            //Wanneer de action "logout" bevat dan zal de Session Cursist op null gezet worden.
             case "logout":
                 Session["cursist"] = null;
                 break;
@@ -38,28 +42,34 @@
         }
         }
     }
-
+    //Als het sessie object null is dan sturen we de gebruiker naar het inlogscherm
     if (Session["cursist"] == null)
     {
         Response.Redirect("~/Deelpagina's/Default.cshtml");
     }
     
 
-    //Dit is om nederlandse weekdagen te krijgen
+    //Dit is om nederlandse weekdagen/maanden te krijgen
     System.Globalization.CultureInfo culture = new System.Globalization.CultureInfo("nl-BE");
 
     string message = "Alles gaat goed";
+    //een lijst maken van alle evenementen
     List<Administratix.BLL.Evenement> evenementenLijst = new List<Administratix.BLL.Evenement>();
+    
+    //een lijst maken van de ingeschreven evenementen
     List<Administratix.BLL.EvenementInschrijving> evenementInschrijvingLijst = new List<Administratix.BLL.EvenementInschrijving>();
     
+    //lijst met objecten van evenement zal opgevuld worden met methode van model SelectAll
     evenementenLijst = Administratix.Model.Evenement.EvenementSelectAll();
     
+    //Als sessie cursist niet leeg is
     if (Session["cursist"] != null)
     {
         Administratix.BLL.Cursist cursist = (Administratix.BLL.Cursist)Session["cursist"];
         
         evenementenLijst = Administratix.Model.Evenement.EvenementSelectAll();
 
+        //Als action niet null is vergelijk dan de actions
         if (action != null)
         {
             if (action.Equals("inschrijven"))
@@ -85,6 +95,10 @@
     </div>
 </form>
 
+<!--
+    View Controller: 
+    Deze zal kijken naar de action en afhankelijk van de action een andere view tonen.
+-->
 
     @if (action.Equals("ingeschreven-tonen"))
     {
