--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
@@ -1,18 +1,23 @@
-﻿@{
+﻿@{   
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Lessenrooster";
 
+    
+    //Coordinating controller
     Session["Page"] = "6";
 
     string action = "";
 
     Session["loginError"] = "";
+    //Kijken of de gebruiker is ingelogd. 
     if (IsPost)
     {
         action = Request["action"];
 
         switch (action)
         {
+            //Wanneer de action "login" bevat dan checken of Session Cursist op null staat. Zoja dan koppelen we de 
+            //de Session cursist met inputveld van inlogscherm
             case "login":
                 if (Session["cursist"] == null)
                 {
@@ -29,7 +34,7 @@
 
                 }
                 break;
-
+            //Wanneer de action "logout" bevat dan zal de Session Cursist op null gezet worden.
             case "logout":
                 Session["cursist"] = null;
                 break;
@@ -37,22 +42,25 @@
         }
     }
 
+    //Als het sessie object null is dan sturen we de gebruiker naar het inlogscherm
     if (Session["cursist"] == null)
     {
         Response.Redirect("~/Deelpagina's/Default.cshtml");
     }
 
-
+    //Wanneer er is ingelogd en terug een post wordt gedaan
     if (IsPost)
     {
         action = Request["action"];
 
+        //Kijken met een switch over welke action het gaat
         switch (action)
         {
+            //Als action = "feestdagen-inclusief" dan zetten we de methode FeestdagenTonen op true
             case "feestdagen-inclusief":
                 Administratix.BLL.Lessenrooster.FeestdagenTonen = true;
                 break;
-
+            //Als action = "feestdagen-exclusief" dan zetten we de methode FeestdagenTonen op false
             case "feestdagen-exclusief":
                 Administratix.BLL.Lessenrooster.FeestdagenTonen = false;
                 break;
@@ -61,9 +69,10 @@
                 break;
         }
     }
-
+    //Weekdagen en maanden in het nederlands tonen.
     System.Globalization.CultureInfo culture = new System.Globalization.CultureInfo("nl-BE");
 
+    //We maken een object van BLL.Lessenrooster. Deze heeft als constructor om een lijst terug te geven van BLL.LesDavinci dus alle lessen
     Administratix.BLL.Lessenrooster lessenrooster = new Administratix.BLL.Lessenrooster();
     if (Session["cursist"] != null)
     {
@@ -81,7 +90,7 @@
         DateTime eindDatum = new DateTime(jaar, 8, 1);
 
         lessenrooster.Lesdagen = Administratix.Model.LesDavinci.LesDavinciSelectAllByCursistNummerAndDates(cursist.CursistNummer, startDatum, eindDatum);
-        if (Administratix.BLL.Lessenrooster.FeestdagenTonen)
+        if (action.Equals("feestdagen-inclusief"))
         {
             lessenrooster.VoegFeestdagenToe(Administratix.Model.Kalender.KalenderSelectAllByDates(startDatum, eindDatum));
         }
